\name{NEWS}
\title{News for Package Rvcg}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in Rvcg version 0.16 (2017-04-04)}{
  \subsection{new features}{
    \itemize{
      \item updated vcglib to version 1.0.1
      \item added meshInfo, nfaces and nverts to obtain mesh information
      \item vcgStlWrite and vcgPlyWrite: avoid doubled file extension if
      filename already contains extension
      \item NEW: vcgObjWrite, vcgOffWrite and vcgWrlWrite, allowing
      export of meshes into OBJ, OFF and WRL format
      \item vcgImport: now supports OFF file format
    }
  }
}

\section{Changes in Rvcg version 0.15 (2017-01-13)}{
  \subsection{new features}{
    \itemize{
      \item updated vcglib to revision 5760 and adapted patches and vcgQEdecim
      \item added meshInfo, nfaces and nverts to obtain mesh information
    }
  }
}
  

\section{Changes in Rvcg version 0.14 (2016-07-06)}{
  \subsection{new features}{
    \itemize{
      \item added vcgBallPivoting: ball pivoting surface reconstruction
      \item added vcgKmeans a fast kmeans clustering for 2D and 3D point clouds
      \item added vcgClostOnKDtreeFromBarycenters, vcgCreateKDtree,
  vcgCreateKDtreeFromBarycenters, vcgSearchKDtree to allow reusing KD-trees
      \item added vcgSubdivide to refine an existing mesh by subidviding faces
      \item added vcgMetro to compare differences between two meshes
  using different types of subsampling (thanks to F. Girinion)
      \item added vcgArea to calculate the surface area of a mesh
      \item added option keep to vcgIsolated and allowed options diameter/facenum to be used with split=T
      \item updated vcglib to revision 5735
      \item added Rvcg::IOMesh::mesh3d2Rvcg<T>, allowing easier
      conversion from mesh3d to vcglib meshtypes
      \item added checkFaceOrientation to check whether a the outer
  layer of a surface mesh points outward
      }
  }
  
  \subsection{bug fixes}{
    \itemize{