@@ -1,8 +1,8 @@
 Package: Rvcg
 Type: Package
 Title: Manipulations of Triangular Meshes Based on the 'VCGLIB' API
-Version: 0.16
-Date: 2017-03-30
+Version: 0.17
+Date: 2017-09-04
 Authors@R: c(
     person("Stefan", "Schlager",, "zarquon42@gmail.com", c("aut", "cre", "cph")),
     person("Girinon", "Francois",,, c("ctb"))
@@ -31,9 +31,9 @@ Biarch: yes
 URL: http://github.com/zarquon42b/Rvcg, http://vcg.sf.net/
 RoxygenNote: 6.0.1
 NeedsCompilation: yes
-Packaged: 2017-04-05 11:50:56 UTC; schlager
+Packaged: 2017-09-07 12:15:01 UTC; schlager
 Author: Stefan Schlager [aut, cre, cph],
   Girinon Francois [ctb]
 Maintainer: Stefan Schlager <zarquon42@gmail.com>
 Repository: CRAN
-Date/Publication: 2017-04-06 06:54:12 UTC
+Date/Publication: 2017-09-07 18:26:38 UTC
