@@ -1,7 +1,7 @@
-a5bda9fcb561ec669ad0147bfd62020f *DESCRIPTION
+2d9228d9728875f07bf3fbf6e2a80a09 *DESCRIPTION
 70421679862083dcc8f49a7760416872 *LICENSE
 a1ecec8f7c35cc1b8d18c73629bce228 *NAMESPACE
-a8e716db027fc944b2c21580e0fe80ab *R/Rvcg-package.R
+ec98f302598de3d03fe034768db4a4e0 *R/Rvcg-package.R
 2afb2cdada828c2f13c0dd878b77b341 *R/meshInfo.r
 6591229d45326b03388b0ce986966fba *R/meshintegrity.r
 7bafaeb6c3bf9c2ecc129d9af6dab234 *R/normorient.r
@@ -17,7 +17,7 @@ bd0f2e99b71abdc08ef095353fb7b86f *R/vcgCreateKD.r
 a5b28ce147f12f758260e06639faad5c *R/vcgCurve.r
 6f8ba72a1b5ef717c366fdaa3d44b750 *R/vcgGetEdge.r
 d5bdc921edbc08acf3a409d6c2903b62 *R/vcgImport.r
-4c5359b6806f9926d7e9c8106a2f95fd *R/vcgIsolated.r
+5e72da76de8a97de972466b098e65e94 *R/vcgIsolated.r
 e245bdd49f4a2e14ee4e11b46dd38405 *R/vcgIsosurface.r
 27dffee7830a3dc8a9d750b8cf283b38 *R/vcgKDtree.r
 589871970e6a63e5e0039d857306fea0 *R/vcgKmeans.r
@@ -26,7 +26,7 @@ caa62d825ad39c74d5587c1a676645aa *R/vcgMetro.r
 2c0d6630474e3ad3cdea0921b0a62e76 *R/vcgOneRingArea.r
 c8438668e971897408e949d23b32f920 *R/vcgPlatonic.r
 d66bea127d996ae7bd19e9afbbae15ed *R/vcgPlyRead.r
-99254e830cf09b7e4afd8a027c9c0828 *R/vcgPlyWrite.r
+5c25662b092d4ce3bd1215e30995e82c *R/vcgPlyWrite.r
 52dc4566df64b18e6a7f5632bc37b84c *R/vcgQEdecim.r
 e9b4ab6c29134ae1349b0d7d721cdeaa *R/vcgRaySearch.r
 50528f63b60b13441518c1c73d5bec12 *R/vcgSample.r
@@ -40,9 +40,9 @@ faf0a86433e3ef7bd49677856e2e0534 *cleanup
 5289d94947630da4e6294cea4106edfa *data/humface.rda
 db17f2c29701d7264f7365e9cd1b702d *inst/CITATION
 82859a94dba98071d74f06fbebc62cd4 *inst/COPYRIGHTS
-5bafe21939f606b282779bb3b6a501dc *inst/NEWS.Rd
+7ae9d396f97dce6a674b6dc717708790 *inst/NEWS.Rd
 df6fedee25f982212d0432241728d1b0 *man/Rvcg-deprecated.Rd
-657b1f7ddfdd139d8f9c6511e5914f91 *man/Rvcg-package.Rd
+c8a3cdeed9f98f2e6ed024196cc7656c *man/Rvcg-package.Rd
 070ada99b41d2aaa66ca7dd8976bc2f9 *man/checkFaceOrientation.Rd
 959c26f329d0fa7a253bb21b1a36ca52 *man/dummyhead.Rd
 173af7f46dc03b8032a3b9a9751d78c7 *man/humface.Rd
@@ -64,14 +64,14 @@ feda30142b4d6a25b9be04db6396f529 *man/vcgCreateKDtree.Rd
 78c5ea48317926274365ddb3de0a821b *man/vcgCurve.Rd
 5f956c8de19307c975a35c491d61ef3d *man/vcgGetEdge.Rd
 19c40eb088de977b3fd806f40d4fbefc *man/vcgImport.Rd
-9e6e031eeb860afc5e25ee6ca8bf3f66 *man/vcgIsolated.Rd
+db94d9d543525261dccc1823ef7c4ec9 *man/vcgIsolated.Rd
 40d2e9aa729182fb97c4799d470a268e *man/vcgIsosurface.Rd
 4aadb7b0419940e01966ac1514a2a057 *man/vcgKDtree.Rd
 a30c0e9cbee74f8f8ac23d94c3cf1b10 *man/vcgKmeans.Rd
 08f75afc7abb21d48f2962e80582e866 *man/vcgMeshres.Rd
 87d793cb01cdbd5fd260e535c698cf70 *man/vcgMetro.Rd
 58d277074e2dd64ba54f5d41485f8dd4 *man/vcgNonBorderEdge.Rd
-212fab4e1dda1f651662b1f8423f20ef *man/vcgObjWrite.Rd
+58246223e93b005ce11d196ffef67cc9 *man/vcgObjWrite.Rd
 0f2e00e7c05f3aba14b912f3806804c8 *man/vcgOffWrite.Rd
 dfaeb5ac80786e116d1d7512180b011f *man/vcgPlatonic.Rd
 dc7568b869c514976f5f2849b8b7e27a *man/vcgPlyRead.Rd
@@ -81,12 +81,12 @@ dc7568b869c514976f5f2849b8b7e27a *man/vcgPlyRead.Rd
 cf5934c0b019f6d2a9b144000e760016 *man/vcgSample.Rd
 4521001c8a36ff1b0485b8f12da45ae3 *man/vcgSearchKDtree.Rd
 ea21132cb470d288d3a79a743586423d *man/vcgSmooth.Rd
-aa8892f0c3227675de3a4cb008fd85a4 *man/vcgStlWrite.Rd
+3f8dd12bb1f042b8df08d3f2ae7726a6 *man/vcgStlWrite.Rd
 aad5c7947e6284d1ef5f1496e944c945 *man/vcgSubdivide.Rd
 d0848fb7902060cbacd3ba89434b3380 *man/vcgUniformRemesh.Rd
 d779c942de4f56477a77b3d63874d395 *man/vcgUpdateNormals.Rd
 264fadf5f8dca627423cdbc22c1613af *man/vcgVFadj.Rd
-e1fe1f8cfa6708da0b09d556b5a243c9 *man/vcgWrlWrite.Rd
+17f37ce612c291a3a7f345b8431e1d9b *man/vcgWrlWrite.Rd
 dbbb3a2691468e69cd4161db4625dfe2 *src/Makevars
 c6e096c9c58341dcb0f637645735f088 *src/ROneRing.cpp
 f3dbdc94e3e63e782e0c3de86c16674c *src/RQEdecim.cpp
@@ -115,7 +115,7 @@ cfcb7266a12f2b194d53ccdf64b442c1 *src/Rsubdivision.cpp
 7b5ddc1bc5e9c27071c59972c92bee8d *src/Runiform_resample.cpp
 4ae6574dd31bb95eedbed47cd176ba5e *src/RupdateNormals.cpp
 572f57aa63f5860dba24f608f451ae3f *src/RvcgIO.h
-f4fd5a6ce03497374b14cf0f8fc3be87 *src/RvcgKD.h
+a54355551bedf708083c5fa9a647a806 *src/RvcgKD.h
 50901a0c4600fac4ddf85023f2d0c784 *src/RvcgXPTr.cpp
 f5786c83daab8a1d60edb2ecce59689e *src/Volume.h
 57848ff712d9c0232afefc093eced1d6 *src/checkListNames.cpp
@@ -192,7 +192,7 @@ ef1db61517b9ee13fdb88dc48e2c5cca *src/vcglib/vcg/complex/algorithms/polygon_poly
 e530e49a7465b7e1bd09f1897b275555 *src/vcglib/vcg/complex/algorithms/quadrangulator.h
 d496488f93f87c638cb05a01f472476e *src/vcglib/vcg/complex/algorithms/ransac_matching.h
 2c419e43ad102ff96b0746910f43722f *src/vcglib/vcg/complex/algorithms/refine.h
-1d451fce10e4df9794d0372e7d04a02f *src/vcglib/vcg/complex/algorithms/refine_loop.h
+b21faab7b60b35b64aac4a854cc2ee55 *src/vcglib/vcg/complex/algorithms/refine_loop.h
 447040b04074bfbdf1d0c99396591cd9 *src/vcglib/vcg/complex/algorithms/skeleton.h
 39f68fefeb81311f312c222eb128f191 *src/vcglib/vcg/complex/algorithms/smooth.h
 35485c627b158c19a7a4488cfacbcdce *src/vcglib/vcg/complex/algorithms/stat.h
