@@ -9,7 +9,7 @@ vcgObjWrite(mesh, filename = dataname, writeNormals = TRUE)
 \arguments{
 \item{mesh}{triangular mesh of class 'mesh3d' or a numeric matrix with 3-columns}
 
-\item{filename}{character: filename (file extension '.off' will be added automatically.}
+\item{filename}{character: filename (file extension '.obj' will be added automatically.}
 
 \item{writeNormals}{write existing normals to file}
 }
